gen/astralParser.java
// Generated from D:/CHRIS/Escuela/Semestre6/Compiladores/compiladores_proyectofinal/src\astral.g4 by ANTLR 4.7.2


import java.util.List;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.Map;
import org.astral.interprete.ast.*;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class astralParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PRINT=1, VAR=2, IF=3, ELSE=4, ENDIF=5, WHILE=6, ENDWHILE=7, FOR=8, ENDFOR=9, 
		SUMA=10, RESTA=11, MULTI=12, DIVI=13, PARA=14, PARB=15, IGUAL=16, BOOLEANO=17, 
		MAYOR=18, MENOR=19, MAYORIGUAL=20, MENORIGUAL=21, TOTALIGUAL=22, PYQ=23, 
		DP=24, COMILLAS=25, NUMERO=26, STRING=27, ID=28, COMENTARIO=29, WS=30;
	public static final int
		RULE_inicio = 0, RULE_sentencias = 1, RULE_expresion = 2, RULE_variable_declaracion = 3, 
		RULE_variable_asignacion = 4, RULE_comparacion = 5, RULE_ciclos = 6, RULE_impresion = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "sentencias", "expresion", "variable_declaracion", "variable_asignacion", 
			"comparacion", "ciclos", "impresion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'print'", "'var'", "'if'", "'else'", "'endif'", "'while'", "'endwhile'", 
			"'for'", "'endfor'", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "'='", 
			null, "'>'", "'<'", "'>='", "'<='", "'=='", "';'", "':'", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PRINT", "VAR", "IF", "ELSE", "ENDIF", "WHILE", "ENDWHILE", "FOR", 
			"ENDFOR", "SUMA", "RESTA", "MULTI", "DIVI", "PARA", "PARB", "IGUAL", 
			"BOOLEANO", "MAYOR", "MENOR", "MAYORIGUAL", "MENORIGUAL", "TOTALIGUAL", 
			"PYQ", "DP", "COMILLAS", "NUMERO", "STRING", "ID", "COMENTARIO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "astral.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public astralParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InicioContext extends ParserRuleContext {
		public SentenciasContext sentencias;
		public List<SentenciasContext> sentencias() {
			return getRuleContexts(SentenciasContext.class);
		}
		public SentenciasContext sentencias(int i) {
			return getRuleContext(SentenciasContext.class,i);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astralListener ) ((astralListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astralListener ) ((astralListener)listener).exitInicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof astralVisitor ) return ((astralVisitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			        List<NodoAST> cuerpo = new ArrayList<NodoAST>();
			        Map<String, Object> tablaSimbolos = new HashMap<String, Object>();

			    
			setState(22);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << VAR) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << PARA) | (1L << BOOLEANO) | (1L << NUMERO) | (1L << STRING) | (1L << ID))) != 0)) {
				{
				{
				setState(17);
				((InicioContext)_localctx).sentencias = sentencias();
				cuerpo.add(((InicioContext)_localctx).sentencias.nodo);
				}
				}
				setState(24);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			        for(NodoAST lineas : cuerpo)
			        {
			            lineas.ejecutar(tablaSimbolos);
			        }
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciasContext extends ParserRuleContext {
		public NodoAST nodo;
		public ExpresionContext expresion;
		public ImpresionContext impresion;
		public ComparacionContext comparacion;
		public CiclosContext ciclos;
		public Variable_asignacionContext variable_asignacion;
		public Variable_declaracionContext variable_declaracion;
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public ImpresionContext impresion() {
			return getRuleContext(ImpresionContext.class,0);
		}
		public ComparacionContext comparacion() {
			return getRuleContext(ComparacionContext.class,0);
		}
		public CiclosContext ciclos() {
			return getRuleContext(CiclosContext.class,0);
		}
		public Variable_asignacionContext variable_asignacion() {
			return getRuleContext(Variable_asignacionContext.class,0);
		}
		public Variable_declaracionContext variable_declaracion() {
			return getRuleContext(Variable_declaracionContext.class,0);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astralListener ) ((astralListener)listener).enterSentencias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astralListener ) ((astralListener)listener).exitSentencias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof astralVisitor ) return ((astralVisitor<? extends T>)visitor).visitSentencias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencias);
		try {
			setState(45);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(27);
				((SentenciasContext)_localctx).expresion = expresion(0);
				((SentenciasContext)_localctx).nodo =  ((SentenciasContext)_localctx).expresion.nodo;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(30);
				((SentenciasContext)_localctx).impresion = impresion();
				((SentenciasContext)_localctx).nodo =  ((SentenciasContext)_localctx).impresion.nodo;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(33);
				((SentenciasContext)_localctx).comparacion = comparacion();
				((SentenciasContext)_localctx).nodo =  ((SentenciasContext)_localctx).comparacion.nodo;
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(36);
				((SentenciasContext)_localctx).ciclos = ciclos();
				((SentenciasContext)_localctx).nodo =  ((SentenciasContext)_localctx).ciclos.nodo;
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(39);
				((SentenciasContext)_localctx).variable_asignacion = variable_asignacion();
				((SentenciasContext)_localctx).nodo =  ((SentenciasContext)_localctx).variable_asignacion.nodo;
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(42);
				((SentenciasContext)_localctx).variable_declaracion = variable_declaracion();
				((SentenciasContext)_localctx).nodo =  ((SentenciasContext)_localctx).variable_declaracion.nodo;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public NodoAST nodo;
		public ExpresionContext a;
		public Token NUMERO;
		public Token BOOLEANO;
		public Token STRING;
		public Token ID;
		public ExpresionContext expresion;
		public ExpresionContext b;
		public TerminalNode NUMERO() { return getToken(astralParser.NUMERO, 0); }
		public TerminalNode BOOLEANO() { return getToken(astralParser.BOOLEANO, 0); }
		public TerminalNode STRING() { return getToken(astralParser.STRING, 0); }
		public TerminalNode ID() { return getToken(astralParser.ID, 0); }
		public TerminalNode PARA() { return getToken(astralParser.PARA, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public TerminalNode PARB() { return getToken(astralParser.PARB, 0); }
		public TerminalNode SUMA() { return getToken(astralParser.SUMA, 0); }
		public TerminalNode RESTA() { return getToken(astralParser.RESTA, 0); }
		public TerminalNode MULTI() { return getToken(astralParser.MULTI, 0); }
		public TerminalNode DIVI() { return getToken(astralParser.DIVI, 0); }
		public TerminalNode MAYOR() { return getToken(astralParser.MAYOR, 0); }
		public TerminalNode MENOR() { return getToken(astralParser.MENOR, 0); }
		public TerminalNode MAYORIGUAL() { return getToken(astralParser.MAYORIGUAL, 0); }
		public TerminalNode MENORIGUAL() { return getToken(astralParser.MENORIGUAL, 0); }
		public TerminalNode TOTALIGUAL() { return getToken(astralParser.TOTALIGUAL, 0); }
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astralListener ) ((astralListener)listener).enterExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astralListener ) ((astralListener)listener).exitExpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof astralVisitor ) return ((astralVisitor<? extends T>)visitor).visitExpresion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpresionContext expresion() throws RecognitionException {
		return expresion(0);
	}

	private ExpresionContext expresion(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpresionContext _localctx = new ExpresionContext(_ctx, _parentState);
		ExpresionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expresion, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERO:
				{
				setState(48);
				((ExpresionContext)_localctx).NUMERO = match(NUMERO);
				((ExpresionContext)_localctx).nodo =  new Constante( Float.parseFloat((((ExpresionContext)_localctx).NUMERO!=null?((ExpresionContext)_localctx).NUMERO.getText():null)) );
				}
				break;
			case BOOLEANO:
				{
				setState(50);
				((ExpresionContext)_localctx).BOOLEANO = match(BOOLEANO);
				((ExpresionContext)_localctx).nodo =  new Constante(Boolean.parseBoolean((((ExpresionContext)_localctx).BOOLEANO!=null?((ExpresionContext)_localctx).BOOLEANO.getText():null)));
				}
				break;
			case STRING:
				{
				setState(52);
				((ExpresionContext)_localctx).STRING = match(STRING);
				((ExpresionContext)_localctx).nodo =  new Constante((((ExpresionContext)_localctx).STRING!=null?((ExpresionContext)_localctx).STRING.getText():null));
				}
				break;
			case ID:
				{
				setState(54);
				((ExpresionContext)_localctx).ID = match(ID);
				((ExpresionContext)_localctx).nodo =  new VariableReferencia((((ExpresionContext)_localctx).ID!=null?((ExpresionContext)_localctx).ID.getText():null));
				}
				break;
			case PARA:
				{
				setState(56);
				match(PARA);
				setState(57);
				((ExpresionContext)_localctx).expresion = expresion(0);
				setState(58);
				match(PARB);
				((ExpresionContext)_localctx).nodo =  ((ExpresionContext)_localctx).expresion.nodo;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(117);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(115);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(63);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(64);
						match(SUMA);
						setState(65);
						((ExpresionContext)_localctx).b = ((ExpresionContext)_localctx).expresion = expresion(10);
						((ExpresionContext)_localctx).nodo =  new Suma(((ExpresionContext)_localctx).a.nodo, ((ExpresionContext)_localctx).b.nodo);
						}
						break;
					case 2:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(68);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(69);
						match(RESTA);
						setState(70);
						((ExpresionContext)_localctx).b = ((ExpresionContext)_localctx).expresion = expresion(9);
						((ExpresionContext)_localctx).nodo =  new Resta(((ExpresionContext)_localctx).a.nodo, ((ExpresionContext)_localctx).b.nodo);
						}
						break;
					case 3:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(73);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						{
						setState(74);
						match(MULTI);
						setState(75);
						((ExpresionContext)_localctx).b = ((ExpresionContext)_localctx).expresion = expresion(0);
						}
						((ExpresionContext)_localctx).nodo =  new Multiplicacion(((ExpresionContext)_localctx).a.nodo, ((ExpresionContext)_localctx).b.nodo);
						}
						break;
					case 4:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(79);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						{
						setState(80);
						match(DIVI);
						setState(81);
						((ExpresionContext)_localctx).b = ((ExpresionContext)_localctx).expresion = expresion(0);
						}
						((ExpresionContext)_localctx).nodo =  new Division(((ExpresionContext)_localctx).a.nodo, ((ExpresionContext)_localctx).b.nodo);
						}
						break;
					case 5:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(85);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						{
						setState(86);
						match(MAYOR);
						setState(87);
						((ExpresionContext)_localctx).b = ((ExpresionContext)_localctx).expresion = expresion(0);
						}
						((ExpresionContext)_localctx).nodo =  new Mayor(((ExpresionContext)_localctx).a.nodo, ((ExpresionContext)_localctx).b.nodo);
						}
						break;
					case 6:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(91);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						{
						setState(92);
						match(MENOR);
						setState(93);
						((ExpresionContext)_localctx).b = ((ExpresionContext)_localctx).expresion = expresion(0);
						}
						((ExpresionContext)_localctx).nodo =  new Menor(((ExpresionContext)_localctx).a.nodo, ((ExpresionContext)_localctx).b.nodo);
						}
						break;
					case 7:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(97);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						{
						setState(98);
						match(MAYORIGUAL);
						setState(99);
						((ExpresionContext)_localctx).b = ((ExpresionContext)_localctx).expresion = expresion(0);
						}
						((ExpresionContext)_localctx).nodo =  new MayorIgual(((ExpresionContext)_localctx).a.nodo, ((ExpresionContext)_localctx).b.nodo);
						}
						break;
					case 8:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(103);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						{
						setState(104);
						match(MENORIGUAL);
						setState(105);
						((ExpresionContext)_localctx).b = ((ExpresionContext)_localctx).expresion = expresion(0);
						}
						((ExpresionContext)_localctx).nodo =  new MenorIgual(((ExpresionContext)_localctx).a.nodo, ((ExpresionContext)_localctx).b.nodo);
						}
						break;
					case 9:
						{
						_localctx = new ExpresionContext(_parentctx, _parentState);
						_localctx.a = _prevctx;
						_localctx.a = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expresion);
						setState(109);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						{
						setState(110);
						match(TOTALIGUAL);
						setState(111);
						((ExpresionContext)_localctx).b = ((ExpresionContext)_localctx).expresion = expresion(0);
						}
						((ExpresionContext)_localctx).nodo =  new TotalIgual(((ExpresionContext)_localctx).a.nodo, ((ExpresionContext)_localctx).b.nodo);
						}
						break;
					}
					} 
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Variable_declaracionContext extends ParserRuleContext {
		public NodoAST nodo;
		public Token ID;
		public ExpresionContext expresion;
		public TerminalNode VAR() { return getToken(astralParser.VAR, 0); }
		public TerminalNode ID() { return getToken(astralParser.ID, 0); }
		public TerminalNode PYQ() { return getToken(astralParser.PYQ, 0); }
		public TerminalNode IGUAL() { return getToken(astralParser.IGUAL, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public Variable_declaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astralListener ) ((astralListener)listener).enterVariable_declaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astralListener ) ((astralListener)listener).exitVariable_declaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof astralVisitor ) return ((astralVisitor<? extends T>)visitor).visitVariable_declaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declaracionContext variable_declaracion() throws RecognitionException {
		Variable_declaracionContext _localctx = new Variable_declaracionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_declaracion);
		try {
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(VAR);
				setState(121);
				((Variable_declaracionContext)_localctx).ID = match(ID);
				setState(122);
				match(PYQ);
				((Variable_declaracionContext)_localctx).nodo =  new VariableDeclaracion((((Variable_declaracionContext)_localctx).ID!=null?((Variable_declaracionContext)_localctx).ID.getText():null));
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				match(VAR);
				setState(125);
				((Variable_declaracionContext)_localctx).ID = match(ID);
				setState(126);
				match(IGUAL);
				setState(127);
				((Variable_declaracionContext)_localctx).expresion = expresion(0);
				setState(128);
				match(PYQ);
				((Variable_declaracionContext)_localctx).nodo =  new VariableAsignacion((((Variable_declaracionContext)_localctx).ID!=null?((Variable_declaracionContext)_localctx).ID.getText():null), ((Variable_declaracionContext)_localctx).expresion.nodo);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_asignacionContext extends ParserRuleContext {
		public NodoAST nodo;
		public Token ID;
		public ExpresionContext expresion;
		public TerminalNode ID() { return getToken(astralParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(astralParser.IGUAL, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PYQ() { return getToken(astralParser.PYQ, 0); }
		public Variable_asignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astralListener ) ((astralListener)listener).enterVariable_asignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astralListener ) ((astralListener)listener).exitVariable_asignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof astralVisitor ) return ((astralVisitor<? extends T>)visitor).visitVariable_asignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_asignacionContext variable_asignacion() throws RecognitionException {
		Variable_asignacionContext _localctx = new Variable_asignacionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable_asignacion);
		try {
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				((Variable_asignacionContext)_localctx).ID = match(ID);
				setState(134);
				match(IGUAL);
				setState(135);
				((Variable_asignacionContext)_localctx).expresion = expresion(0);
				setState(136);
				match(PYQ);
				((Variable_asignacionContext)_localctx).nodo =  new VariableAsignacion((((Variable_asignacionContext)_localctx).ID!=null?((Variable_asignacionContext)_localctx).ID.getText():null), ((Variable_asignacionContext)_localctx).expresion.nodo);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				((Variable_asignacionContext)_localctx).ID = match(ID);
				setState(140);
				match(IGUAL);
				setState(141);
				((Variable_asignacionContext)_localctx).expresion = expresion(0);
				((Variable_asignacionContext)_localctx).nodo =  new VariableAsignacion((((Variable_asignacionContext)_localctx).ID!=null?((Variable_asignacionContext)_localctx).ID.getText():null), ((Variable_asignacionContext)_localctx).expresion.nodo);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
